# ClassRobot

./: .env  .env.prod  .gitignore  .pre-commit-config.yaml  README.md  bot.py  environment.yml  manage.py  pyproject.toml  requirements.txt  run.bat  test.html
src/managers/: README.md
src/managers/class_table/: REAME.md  __init__.py  commands.py
src/managers/college/: __init__.py  commands.py
src/managers/major/: __init__.py  commands.py
src/managers/student/: __init__.py  commands.py  params.py
src/managers/teacher/: __init__.py  alconna.py  commands.py
src/managers/user/: README.md  __init__.py  bind_token.py  commands.py
src/others/echo/: __init__.py
src/others/feedback/: __init__.py  methods.py
src/others/helper/: README.md  __init__.py  config.py  helper.py  typings.py
src/others/image_search/: __init__.py  config.py  search.py
src/others/text2img/: __init__.py  config.py  methods.py
src/plugins/costs/: __init__.py  commands.py  config.py  methods.py
src/plugins/find_at_user/: __init__.py  commands.py  config.py  methods.py
src/plugins/morals/: __init__.py  commands.py  methods.py
src/plugins/tasks/: __init__.py  commands.py  config.py  methods.py
src/plugins/timer_notice/: command.py  easy_notice.py  notice.py  typing.py
src/plugins/tools/: __init__.py  commands.py  methods.py
src/plugins/user_manage/: README.md  __init__.py
src/plugins/user_manage/manage/class_table/: README.md  __init__.py  method.py
src/plugins/user_manage/manage/college/: __init__.py
src/plugins/user_manage/manage/major/: __init__.py
src/plugins/user_manage/manage/student/: __init__.py  base_excel.xlsx  config.py  method.py
src/plugins/user_manage/manage/teacher/: __init__.py
src/plugins/user_manage/manage/user_setting/: __init__.py  config.py  modify.py
templates/base/: base.jinja
templates/cost/: costcard.html  costlist.html
templates/feedback/: feedback.html  feedbacklist.html  styles.html
templates/helper/: helper.jinja  helper_tags.jinja  styles.jinja
templates/tasks/: tasklist.html
utils/: __init__.py  config.py  typings.py
utils/adapter/: event.py
utils/auth/: __init__.py  config.py  extension.py  finder.py  token.py
utils/cos/: __init__.py
utils/formant/: __init__.py
utils/localstore/: __init__.py
utils/manages/: __init__.py  config.py  finder.py
utils/models/: __init__.py  depends.py  methods.py  models.py
utils/orm/: __init__.py  config.py  models.py  signals.py
utils/params/: __init__.py  args.py  notes.py
utils/path/: __init__.py
utils/session/: __init__.py  platform.py
utils/tools/: __init__.py  docs_sheet.py  templates.py  zipfile.py
utils/tools/cos/: __init__.py  config.py
utils/tools/html2img/: __init__.py  api.py  imgkit.py
utils/typing/: __init__.py
utils/typings/: __init__.py
