[tool.poetry]
name = "classbot"
version = "0.1.0"
description = "classbot"
authors = ["2711402357@qq.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
nonebot2 = {extras = ["fastapi"], version = "^2.0.0"}
pandas = "^2.0.2"
httpx = "^0.24.1"
fastapi = "^0.97.0"
django = "^4.2.2"
nonebot-adapter-onebot = "^2.2.3"
imgkit = "^1.2.3"
jinja2 = "^3.1.2"
pygtrans = "^1.5.2"
markdown2 = "^2.4.9"
fake-useragent = "^1.1.3"
pymysql = "^1.1.0"
cryptography = "^41.0.1"

[tool.poetry.group.dev.dependencies]
pycln = "^2.1.5"
black = "^23.3.0"
isort = "^5.12.0"
pre-commit = "^3.3.2"
autoflake = "^2.1.1"

[[tool.poetry.source]]
name = "tencent"
url = "https://mirrors.cloud.tencent.com/pypi/simple"
priority = "default"

[tool.nonebot]
plugins = [
]
plugin_dirs = [
    "src/plugins",
    "src/others"
]
adapters = [
    {name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11"}, 
    # {name = "Console", module_name = "nonebot.adapters.console"} 
]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 88
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
src_paths = ["nonebot", "tests"]
extra_standard_library = ["typing_extensions"]

[tool.pycln]
path = "."
all = false

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
