[tool.poetry]
name = "classbot"
version = "0.1.0"
description = "classbot"
authors = ["2711402357@qq.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
nonebot2 = {extras = ["fastapi"], version = "^2.0.0"}
pandas = "^2.0.2"
httpx = "^0.24.1"
aiomysql = "^0.2.0"
fastapi = "^0.97.0"
imgkit = "^1.2.3"
jinja2 = "^3.1.2"
markdown2 = "^2.4.9"
cryptography = "^41.0.1"
nonebot-adapter-qq = "^1.0.1"
nonebot-adapter-onebot = "^2.3.0"
nonebot-plugin-orm = "^0.3.0"
nonebot-plugin-alconna = "^0.31.0"
nonebot-plugin-animeres = "^1.0.3"
nonebot-plugin-localstore = "^0.5.1"
nonebot-plugin-blockwords = "^0.1.2"
nonebot-plugin-apscheduler = "^0.3.0"
strenum = "^0.4.15"

[tool.poetry.group.dev.dependencies]
pycln = "^2.3.0"
black = "^23.10.1"
isort = "^5.12.0"
pre-commit = "^3.5.0"
autoflake = "^2.2.0"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "default"

[tool.nonebot]
plugins = [
    "nonebot_plugin_orm",
    "nonebot_plugin_alconna",
    "nonebot_plugin_animeres",
    "nonebot_plugin_blockwords",
    "nonebot_plugin_localstore",
    "nonebot_plugin_apscheduler",
    "utils.models",
]
plugin_dirs = [
    "src/managers",
    "src/plugins",
    "src/others",
]
adapters = [
    {name = "QQ", module_name = "nonebot.adapters.qq"},
]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 88
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
src_paths = ["nonebot", "tests"]
extra_standard_library = ["typing_extensions"]

[tool.pycln]
path = "."
all = false

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
